tests/semantic_errors/testcase13.c
// void type in arithmetic operation

void foo(void){

}

int main(void){
    int x;
    x = 1 + foo();
}